[package]
name = "imdb-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
actix-web = "4"
reqwest = "0.11"
scraper = "0.14"
select = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"