[package]
name = "nba-stat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.11.4", features = ["json"] }
cpython = "0.7.1"
clap = { version = "4.0.32", features = ["derive"] }
actix-web = "4"